# PINNs_testbench

./: .gitignore  1D & non-time dependend.ipynb  1D & time independent.ipynb  AUTHORS  CHANGELOG.md  README.md  Specific Problems.ipynb  __init__.py  data.py  main.ipynb  models.py  oii.py  pyproject.toml  training.py
.github/workflows/: test.yml
PINNLearning/: data.py  models.py  training.py
data/: simp_data_noisy.keras  simp_data_true.keras  simp_initial.keras  simp_mat_var_disc.keras  simp_mat_var_smooth.keras
data/HPO_results/00/execution0/: events.out.tfevents.1749068539.MacBookPro.14330.0.v2
data/HPO_results/01/execution0/: events.out.tfevents.1749068547.MacBookPro.14330.3.v2
data/HPO_results/02/execution0/: events.out.tfevents.1749068560.MacBookPro.14330.6.v2
data/HPO_results/03/execution0/: events.out.tfevents.1749068569.MacBookPro.14330.9.v2
data/HPO_results/04/execution0/: events.out.tfevents.1749068578.MacBookPro.14330.12.v2
data/HPO_results/BO/: experiment_state-2025-06-15_20-58-06.json  search_gen_state-2025-06-15_20-58-06.json  searcher-state-2025-06-15_20-58-06.pkl  tuner.pkl
data/HPO_results/BOHB/: experiment_state-2025-06-15_21-31-02.json  search_gen_state-2025-06-15_21-31-02.json  searcher-state-2025-06-15_21-31-02.pkl  tuner.pkl
data/HPO_results/HB/: basic-variant-state-2025-06-15_21-15-15.json  experiment_state-2025-06-15_21-15-15.json  tuner.pkl
data/HPO_results/untitled_project/: oracle.json
examples/: 1D & non-time dependend.ipynb  HPO & NAS.ipynb  SimpleODEs.ipynb
test/: test_data.py  test_models.py
(+845 files in other folders)
