[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "PINN-Testbench"
description = "A testing ground for PINNs"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Micha Erkel", email = "micha.erkel@email.uni-freiburg.de" }
]
classifiers = [
    "Development Status :: Alpha",
    "Programming Language :: Python"
]
requires-python = ">=3.9.0,<3.12.0"
dynamic = [ "version" ]
dependencies = [
    "ipykernal",
    "ipywidgets",
    "numpy",
    "tensorflow",
    "keras",
    "ray",
    "pandas",
    "pyarrow",
    "optuna",
    "hpbandster"
]

[project.optional-dependencies]
test = [
    "flake8",
    "pytest",
    "pytest-cov",
    "pytest-flake8"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project.urls]
documentation = "https://imtek-simulation.github.io/python-skeleton/"
repository = "https://github.com/imtek-simulation/python-skeleton"
changelog = "https://github.com/imtek-simulation/python-skeleton/blob/master/CHANGELOG.md"
